syntax = "proto3";

package io.harness.perpetualtask.instancesync;

option java_multiple_files = true;

message AzureVmssInstanceSyncPerpetualTaskParams {
  string subscription_id = 1;
  string resource_group_name = 2;
  string vmss_id = 3;
  bytes azure_config = 4;
  bytes azure_encrypted_data = 5;
}